testsuite/tests/warnings/should_fail/MissingMethods.stderr

MissingMethods.hs:9:10: error:
    • No explicit implementation for
        ‘m2’
    • In the instance declaration for ‘C Bool’
